--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amatista-commons",
   "version": "0.0.1",
-  "description": "Produce universal library with webpack and es6",
+  "description": "Utility Functions for Amatista Projects",
   "main": "lib/library.js",
   "scripts": {
     "build": "webpack --env build",
@@ -25,18 +25,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/krasimir/webpack-library-starter.git"
+    "url": "https://github.com/AmatistaDigital/amatista-commons.git"
   },
   "keywords": [
-    "webpack",
-    "es6",
-    "starter",
-    "library",
-    "universal",
-    "umd",
-    "commonjs"
+    "aws",
+    "jwt",
+    "es6"
   ],
-  "author": "Krasimir Tsonev",
+  "author": "Amatista Digital",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/krasimir/webpack-library-starter/issues"
