--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "main": "lib/library.js",
   "scripts": {
     "build": "webpack --env build",
-    "dev": "webpack --progress --colors --watch --env dev",
-    "test": "mocha --compilers js:babel-core/register --colors ./test/*.spec.js",
-    "test:watch": "mocha --compilers js:babel-core/register --colors -w ./test/*.spec.js"
+    "dev": "webpack --progress --colors --watch --env dev"
   },
   "devDependencies": {
-    "babel": "6.5.2",
-    "babel-core": "6.22.1",
-    "babel-eslint": "7.1.1",
-    "babel-loader": "6.2.10",
-    "babel-plugin-add-module-exports": "0.1.2",
-    "babel-preset-es2015": "6.22.0",
-    "chai": "3.4.1",
-    "eslint": "1.7.2",
-    "eslint-loader": "1.6.1",
-    "mocha": "2.3.4",
-    "webpack": "2.2.1",
-    "yargs": "6.6.0"
+    "babel": "6.23.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.0",
+    "babel-preset-stage-0": "6.22.0",
+    "babel-core": "6.24.0",
+    "babel-eslint": "7.2.1",
+    "babel-loader": "6.4.1",
+    "babel-plugin-add-module-exports": "0.2.1",
+    "babel-plugin-transform-async-to-generator": "6.22.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "6.24.0",
+    "babel-plugin-transform-runtime": "6.23.0",
+    "eslint": "3.18.0",
+    "eslint-loader": "1.7.0",
+    "eslint-plugin-node": "4.2.2",
+    "webpack": "2.3.2"
   },
   "repository": {
     "type": "git",
