--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "build": "webpack --env build",
     "dev": "webpack --progress --colors --watch --env dev"
   },
+  "dependencies": {
+    "joi": "10.3.1",
+    "babel-runtime": "6.23.0"
+  },
   "devDependencies": {
     "babel": "6.23.0",
-    "babel-polyfill": "6.23.0",
-    "babel-preset-es2015": "6.24.0",
-    "babel-preset-stage-0": "6.22.0",
     "babel-core": "6.24.0",
     "babel-eslint": "7.2.1",
     "babel-loader": "6.4.1",
@@ -19,10 +20,14 @@
     "babel-plugin-transform-async-to-generator": "6.22.0",
     "babel-plugin-transform-es2015-modules-commonjs": "6.24.0",
     "babel-plugin-transform-runtime": "6.23.0",
+    "babel-polyfill": "6.23.0",
+    "babel-preset-es2015": "6.24.0",
+    "babel-preset-stage-0": "6.22.0",
     "eslint": "3.18.0",
     "eslint-loader": "1.7.0",
     "eslint-plugin-node": "4.2.2",
-    "webpack": "2.3.2"
+    "webpack": "2.3.2",
+    "webpack-node-externals": "^1.5.4"
   },
   "repository": {
     "type": "git",
@@ -36,7 +41,7 @@
   "author": "Amatista Digital",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/krasimir/webpack-library-starter/issues"
+    "url": "https://github.com/AmatistaDigital/amatista-commons"
   },
-  "homepage": "https://github.com/krasimir/webpack-library-starter"
+  "homepage": "https://github.com/AmatistaDigital/amatista-commons"
 }
