--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
   "dependencies": {
     "aws-sdk": "2.34.0",
     "babel-runtime": "6.23.0",
-    "joi": "10.3.1"
+    "bcrypt-nodejs": "0.0.3",
+    "joi": "10.3.1",
+    "jsonwebtoken": "7.3.0"
   },
   "devDependencies": {
     "babel": "6.23.0",
