--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "babel-runtime": "6.23.0",
     "bcrypt-nodejs": "0.0.3",
     "joi": "10.3.1",
-    "jsonwebtoken": "7.3.0"
+    "jsonwebtoken": "7.3.0",
+    "validator": "7.0.0"
   },
   "devDependencies": {
     "babel": "6.23.0",
